--- a/2 Responsive layout/03 bootstrap组件0731/13 QQ消息列表.html
+++ b/2 Responsive layout/03 bootstrap组件0731/13 QQ消息列表.html
@@ -9,21 +9,274 @@
 </head>
 
 <body>
-    <div class="list-group">
+    <nav class="navbar navbar-default top">
+        <div class="container-fluid">
+            <div class="row head">
+                <img src="img/1.jpg" alt="" class="col-xs-2 img-circle">
+                <img src="img/2.jpg" alt="" class="col-xs-2 col-xs-offset-8">
+            </div>
+        </div>
+    </nav>
+    <div class="list-group" id="u1">
         <li class="list-group-item">
-            <img src="img/1.jpg" alt="">
-            <p>rssdfsfa</p>
-            
+            <div class="col-xs-10">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#" class="media-object">
+                            <img src="img/3.jpg" class="img-circle" alt="">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">任务3-进击的魔群</h4>
+                        <p>闭包的使用原理</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <span class="badge">1</span>
+            </div>
         </li>
-        <li class="list-group-item"></li>
-        <li class="list-group-item"></li>
-        <li class="list-group-item"></li>
-        <li class="list-group-item"></li>
-        <li class="list-group-item"></li>
-        <li class="list-group-item"></li>
-        <li class="list-group-item"></li>
+        <li class="list-group-item">
+            <div class="col-xs-10">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#" class="media-object">
+                            <img src="img/4.jpg" class="img-circle" alt="">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">群通知</h4>
+                        <p>教导员魔铃邀请你加入群</p>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div class="col-xs-10">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#" class="media-object">
+                            <img src="img/5.jpg" class="img-circle" alt="">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">前端开发群3</h4>
+                        <p>[全体消息你好，我是新手]</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <span class="badge">99+</span>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div class="col-xs-10">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#" class="media-object">
+                            <img src="img/6.jpg" class="img-circle" alt="">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">群消息</h4>
+                        <p>Bootstrap.css</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <span class="badge">1</span>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div class="col-xs-10">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#" class="media-object">
+                            <img src="img/7.jpg" class="img-circle" alt="">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading"> QQ购物车</h4>
+                        <p>清仓连衣裙1元秒杀</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <span class="badge">99+</span>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div class="col-xs-10">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#" class="media-object">
+                            <img src="img/4.jpg" class="img-circle" alt="">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">群通知</h4>
+                        <p>教导员魔铃邀请你加入群</p>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div class="col-xs-10">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#" class="media-object">
+                            <img src="img/5.jpg" class="img-circle" alt="">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">前端开发群3</h4>
+                        <p>[全体消息你好，我是新手]</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <span class="badge">99+</span>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div class="col-xs-10">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#" class="media-object">
+                            <img src="img/6.jpg" class="img-circle" alt="">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">群消息</h4>
+                        <p>Bootstrap.css</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <span class="badge">1</span>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div class="col-xs-10">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#" class="media-object">
+                            <img src="img/7.jpg" class="img-circle" alt="">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading"> QQ购物车</h4>
+                        <p>清仓连衣裙1元秒杀</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <span class="badge">99+</span>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div class="col-xs-10">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#" class="media-object">
+                            <img src="img/4.jpg" class="img-circle" alt="">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">群通知</h4>
+                        <p>教导员魔铃邀请你加入群</p>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div class="col-xs-10">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#" class="media-object">
+                            <img src="img/5.jpg" class="img-circle" alt="">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">前端开发群3</h4>
+                        <p>[全体消息你好，我是新手]</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <span class="badge">99+</span>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div class="col-xs-10">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#" class="media-object">
+                            <img src="img/6.jpg" class="img-circle" alt="">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">群消息</h4>
+                        <p>Bootstrap.css</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <span class="badge">1</span>
+            </div>
+        </li>
+        <li class="list-group-item">
+            <div class="col-xs-10">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#" class="media-object">
+                            <img src="img/7.jpg" class="img-circle" alt="">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading"> QQ购物车</h4>
+                        <p>清仓连衣裙1元秒杀</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-2">
+                <span class="badge">99+</span>
+            </div>
+        </li>
+
     </div>
+    <nav class="row navbar navbar-default navbar-fixed-bottom mybottom">
+        <div class="col-xs-4 text-center">
+            <span class="glyphicon glyphicon-envelope"></span>
+            <p class="text">消息</p>
+        </div>
+        <div class="col-xs-4 text-center">
+            <span class="glyphicon glyphicon-user"></span>
+            <p class="text">联系人</p>
+        </div>
+        <div class="col-xs-4 text-center">
+            <span class="glyphicon glyphicon-star"></span>
+            <p class="text">动态</p>
+        </div>
+    </nav>
 </body>
+<style>
+    .top {
+        background-color: #13B9F7;
+    }
+
+    #u1>li {
+        height: 70px;
+    }
+
+    #u1>li img {
+        width: 40px;
+    }
+
+    .mybottom {
+        background-color: rgba(0, 0, 0, 0.1);
+    }
+</style>
 <!-- 引入jquery -->
 <script src="js/jquery-1.12.4.js"></script>
 <!-- 引入bootstrap js -->
