--- a/2 Responsive layout/05 微票儿网站/微票儿网站.html
+++ b/2 Responsive layout/05 微票儿网站/微票儿网站.html
@@ -4,81 +4,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>微票儿电影</title>
+    <title>微票儿</title>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <script src="js/jquery-1.12.4.js"></script>
+    <script src="js/bootstrap.js"></script>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-inverse navbar-fixed-top">
-            <!-- 居中 -->
             <div class="container">
                 <div class="navbar-header">
-                    <a href="#">
+                    <a class="" href="#">
                         <img alt="Brand" src="img/logoMsg.png">
                     </a>
-                    <!-- 按钮 四个横线collape 开始不显示的 -->
-                    <button type="button" class="navbar-toggle" data-toggle="collapse"
-                        data-target=".navbar-ex1-collapse">
-                        <span class="sr-only">Toggle navigation</span>
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
                 </div>
-                <!-- 对应收缩collapse列表 -->
-                <div class="navbar-collape collapse navbar-left " style="margin-top: 10px;margin-left: 10px;">
-                    <ul class="nav navbar-nav">
+                <div class=" navbar-collapse collapse navbar-left" style="margin-top: 10px;">
+                    <ul class="nav navbar-nav ">
                         <li><a href="#">全国</a></li>
-                        <li>
-                            <div class="btn-group">
-                                <a href="#" class="myBtn dropdown-toggle" data-toggle="dropdown">
-                                    演出
-                                    <span class="caret"></span>
-                                </a>
-                                <ul id="mydropdown" class="dropdown-menu">
-                                    <li class="active"><a href="#">演出票</a></li>
-                                    <li><a href="#">场馆</a></li>
-                                </ul>
-                            </div>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                aria-haspopup="true" aria-expanded="false">演出 <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Action</a></li>
+                                <li><a href="#">Another action</a></li>
+                                <li><a href="#">Something else here</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="#">Separated link</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="#">One more separated link</a></li>
+                            </ul>
                         </li>
                         <li><a href="#">电影</a></li>
                         <li><a href="#">我的微票儿 <span class="label label-danger">new</span></a></li>
                     </ul>
+
                 </div>
-                <!-- 登录注册 -->
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right " id="myul" style="margin-top: 10px;">
                     <li><a href="#" data-toggle="modal" data-target="#myModal">登录</a></li>
                     <li><a href="#">注册</a></li>
                 </ul>
+                <form action="#" class="navbar-form navbar-right form" id="myform">
+                    <div class="input-group" style="margin-top: 10px;">
+                        <input type="text" class="form-control" placeholder="请输入要搜索的内容" aria-describedby="basic-addon2">
+                        <span class="input-group-addon btn btn-info" id="basic-addon2" type="submit">搜索</span>
+                    </div>
+                </form>
             </div>
         </nav>
     </header>
-    <div class="modal fade" id="myModal">
-        <div class="modal-dialog modal-sm">
-            <div class="modal-content">
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content modal-sm">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                             aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">
-                        <img src="img/f_wpr_h.png" alt="">
-                        <br>
-                        微信电影演出票官网
-                    </h4>
+                    <img src="img/logoMsg.png" alt="">
+                    <h4 class="modal-title" id="myModalLabel">微信电源演出票官网</h4>
                 </div>
                 <div class="modal-body">
                     <form action="#">
-                        <div class="col-md-10 col-md-offset-1 myMP">
+                        <div class="form-group" style="margin-top: 20px; width: 200px; margin-left: 25px;">
                             <input type="text" class="form-control" placeholder="手机/邮箱/用户名">
                         </div>
-                        <div class="col-md-10 col-md-offset-1 myMP">
-                            <input type="password" class="form-control" placeholder="密码">
+                        <div class="form-group" style="margin-top: 20px; width: 200px; margin-left: 25px;">
+                            <input type="text" class="form-control" placeholder="密码">
                         </div>
-                        <div class="col-md-10 col-md-offset-1 myMP">
-                            <input type="checkbox">下次自动登录
+                        <div class="form-group" style="margin-top: 20px; width: 200px; margin-left: 25px;">
+                            <div class="btn-group" role="group" data-bs-toggle="buttons">
+                                <label class="">
+                                    <input type="checkbox" class="me-2" name="" id="" checked autocomplete="off" />
+                                    下次自动登录
+                                </label>
+                            </div>
                         </div>
-                        <div class="col-md-10 mB">
-                            <button class="btn btn-primary form-control">登录</button>
+                        <div class="form-group">
+                            <button class="btn btn-primary form-control" type="submit">登录</button>
                         </div>
                     </form>
                 </div>
@@ -87,52 +94,81 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid" id="content1">
+        <div class="row">
+            <div class="col-md-9 col-xs-12">
+                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#mycarousel" data-slide-to="1"></li>
+                        <li data-target="#mycarousel" data-slide-to="2"></li>
+                        <li data-target="#mycarousel" data-slide-to="3"></li>
+                    </ol>
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="img/1.jpg" alt="...">
+                        </div>
+                        <div class="item">
+                            <img src="img/2.jpg" alt="...">
+                        </div>
+                        <div class="item">
+                            <img src="img/3.jpg" alt="...">
+                        </div>
+                        <div class="item">
+                            <img src="img/4.jpg" alt="...">
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-xs-12"></div>
+        </div>
+    </div>
 </body>
+
 <style>
-    @media screen and (max-width:768px) {
-        .myBtn {
-            position: relative;
-            top: 0;
-            right: -14px;
+    @media screen and (max-width: 768px) {
+        .input-group {
+            width: 50% !important;
+        }
+
+
+        #myul {
+            float: right;
+            position: absolute;
+            top: 0px;
+            left: 50%;
+            font-size: 14px;
+            margin-left: 6px;
+        }
+
+        #myul li {
+            float: left;
+        }
+
+        #myul li a {
+            font-size: 16px;
+            padding: 14px 6px;
         }
     }
 
-    * {
-        padding: 0;
-        margin: 0;
-        list-style: none;
+    @media screen and (max-width:990px) {
+
+        #myform {
+            display: none;
+        }
     }
 
-    a {
-        text-decoration: none;
-    }
-
-    .clear:after {
-        content: "";
-        display: block;
-        clear: both;
-    }
-
-    .myBtn {
-        position: relative;
-        top: 14px;
-    }
-
-    #body a {
-        color: #fff;
-    }
-
-    #body a:hover {
-        color: #2ed2c1;
-    }
-
-    .myMP {
-        margin: 20px;
+    #content1 {
+        width: 100%;
+        height: 100%;
+        background: url(img/bannerbg.png) 0 0 no-repeat;
+        margin-top: 70px;
+        padding: 60px 20px;
+        margin-bottom: 20px;
     }
 </style>
-<!-- 引入jquery -->
-<script src="js/jquery-1.12.4.js"></script>
-<!-- 引入bootstrap js -->
-<script src="js/bootstrap.js"></script>
 
 </html>
