--- a/2 Responsive layout/05 微票儿网站/微票儿网站.html
+++ b/2 Responsive layout/05 微票儿网站/微票儿网站.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="muheader">
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
@@ -119,12 +119,208 @@
                         <div class="item">
                             <img src="img/4.jpg" alt="...">
                         </div>
-                        
+
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 col-xs-12"></div>
+            <!-- 特惠列表 -->
+            <div class="col-md-3 col-xs-12">
+                <div class="newsList">
+                    <h4>特惠看</h4>
+                    <img src="img/img1.jpg" alt="" class="img-responsive">
+                    <div class="newsList">
+                        <p><a href="#">[苏州]2016迷笛电子音乐节(预售)</a></p>
+                        <p><a href="#" class="borderLine">穿着花裤子喝着小酒通宵达旦</a></p>
+                        <p><a href="#">2016刘若英世界巡回演唱会</a></p>
+                        <p><a href="#">[上海]百老汇经典音乐剧--《狮子王》</a></p>
+                        <p><a href="#">[苏州]2016迷笛电子音乐节(预售)</a></p>
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-9 col-xs-12">
+                <div class="col-sm-6 col-md-3">
+                    <div class="thumbnail">
+                        <img src="img/5.jpg" alt="...">
+                        <div class="caption">
+                            <p>[上海]百老汇经典音乐剧《狮子王》</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="thumbnail">
+                        <img src="img/6.jpg" alt="...">
+                        <div class="caption">
+                            <p>[北京]陈奕迅 ANOTHER EASON'S LIFE演唱会北京站</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="thumbnail">
+                        <img src="img/7.jpg" alt="...">
+                        <div class="caption">
+                            <p>[深圳]逃跑计划2016巡回演唱会深圳站</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="thumbnail">
+                        <img src="img/8.jpg" alt="...">
+                        <div class="caption">
+                            <p>[北京]BJCC北京漫控潮流博览会</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <div>
+                    <!-- Nav tabs -->
+                    <ul class="nav nav-tabs" role="tablist">
+                        <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab"
+                                data-toggle="tab">首页</a></li>
+                        <li role="presentation"><a href="#profile" aria-controls="profile" role="tab"
+                                data-toggle="tab">技能课</a></li>
+                    </ul>
+                    <!-- Tab panes -->
+                    <div class="tab-content">
+                        <div role="tabpanel" class="tab-pane active" id="home">
+                            <div class="thumbnail">
+                                <img src="img/img2.jpg" alt="...">
+                                <div class="caption text-center">
+                                    <p style="border-bottom: 1px dashed #ccc;">[哈尔滨]梁静茹.你的名字是爱情演唱会</p>
+                                    <p>[太原]蔡依林2016PLAY世界巡回演唱会</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div role="tabpanel" class="tab-pane" id="profile">...</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <img src="img/ad1.jpg" class="myad img-responsive2" alt="">
+    </div>
+    </img>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-9 col-xs-12">
+                <div>
+                    <!-- Nav tabs -->
+                    <ul class="nav nav-tabs" role="tablist">
+                        <li role="presentation" class="active">
+                            <a href="#music1" aria-controls="music1" role="tab" data-toggle="tab">演唱会</a>
+                        </li>
+                        <li role="presentation">
+                            <a href="#music2" aria-controls="music2" role="tab" data-toggle="tab">体育赛事</a>
+                        </li>
+                        <li role="presentation">
+                            <a href="#music3" aria-controls="music3" role="tab" data-toggle="tab">舞台剧</a>
+                        </li>
+                        <li role="presentation">
+                            <a href="#music4" aria-controls="music4" role="tab" data-toggle="tab">儿童亲子</a>
+                        </li>
+                        <li role="presentation">
+                            <a href="#music5" aria-controls="music5" role="tab" data-toggle="tab">音乐会</a>
+                        </li>
+                        <li role="presentation">
+                            <a href="#music6" aria-controls="music6" role="tab" data-toggle="tab">展览活动</a>
+                        </li>
+                    </ul>
+                    <!-- Tab panes -->
+                    <div class="tab-content">
+                        <div role="tabpanel" class="tab-pane active" id="music1">
+                            <div class="row">
+                                <div class="col-sm-6 col-md-3">
+                                    <div class="thumbnail">
+                                        <img src="img/9.jpg" alt="...">
+                                        <div class="caption">
+                                            <p>[苏州]2016迷笛电子音乐节</p>
+                                            <p><span class="mymoney">180</span>元起</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-md-3">
+                                    <div class="thumbnail">
+                                        <img src="img/10.jpg" alt="...">
+                                        <div class="caption">
+                                            <p>[深圳]逃跑计划2016巡回演唱会深圳站</p>
+                                            <p><span class="mymoney">280</span>元起</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-md-3">
+                                    <div class="thumbnail">
+                                        <img src="img/11.jpg" alt="...">
+                                        <div class="caption">
+                                            <p>[北京]陈奕迅 ANOTHER EASON'S LIFE演唱会北京站</p>
+                                            <p><span class="mymoney">280</span>元起</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-md-3">
+                                    <div class="thumbnail">
+                                        <img src="img/12.jpg" alt="...">
+                                        <div class="caption">
+                                            <p>[青岛]周杰伦2016世界巡回演唱会青岛站(即将开售)</p>
+                                            <p><span class="mymoney">380</span>元起</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-md-3">
+                                    <div class="thumbnail">
+                                        <img src="img/13.jpg" alt="...">
+                                        <div class="caption">
+                                            <p>[太原]周杰伦2016世界巡回演唱会太原站(预售) 280元起</p>
+                                            <p><span class="mymoney">280</span>元起</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-md-3">
+                                    <div class="thumbnail">
+                                        <img src="img/14.jpg" alt="...">
+                                        <div class="caption">
+                                            <p>[太原]2016 李荣浩「有 理想」世界巡回演唱会-太原站</p>
+                                            <p><span class="mymoney">280</span>元起</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-md-3">
+                                    <div class="thumbnail">
+                                        <img src="img/15.jpg" alt="...">
+                                        <div class="caption">
+                                            <p>[深圳]徐佳莹“日全蚀”深圳演唱会</p>
+                                            <p><span class="mymoney">380</span>元起</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6 col-md-3">
+                                    <div class="thumbnail">
+                                        <img src="img/16.jpg" alt="...">
+                                        <div class="caption">
+                                            <p>[太原]2016刘若英"Renext 我敢"世界巡回演唱会太原站</p>
+                                            <p><span class="mymoney">380</span>元起</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div role="tabpanel" class="tab-pane" id="music2">...</div>
+                        <div role="tabpanel" class="tab-pane" id="music3">...</div>
+                        <div role="tabpanel" class="tab-pane" id="music4">...</div>
+                        <div role="tabpanel" class="tab-pane" id="music5">...</div>
+                        <div role="tabpanel" class="tab-pane" id="music6">...</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-xs-12">
+
+            </div>
+        </div>
+
     </div>
 </body>
 
@@ -161,6 +357,14 @@
         }
     }
 
+    #myheader a {
+        color: #000017;
+    }
+
+    #myheader a:hover {
+        color: #2ed2c1;
+    }
+
     #content1 {
         width: 100%;
         height: 100%;
@@ -168,6 +372,35 @@
         margin-top: 70px;
         padding: 60px 20px;
         margin-bottom: 20px;
+        background-size: cover;
+    }
+
+    .newsList {
+        background: #fff;
+        padding: 15px 10px;
+    }
+
+    .newText {
+        margin-top: 20px;
+    }
+
+    .newsList p {
+        line-height: 20px;
+    }
+
+    .borderLine {
+        padding: 0 0 10px;
+        border-bottom: 1px dashed #ccc;
+    }
+
+    .myad {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .mymoney {
+        color: #2ed2c1;
+        font-size: 30px;
     }
 </style>
 
