--- a/3 MobileTerminal/01 JD移动首页.html
+++ b/3 MobileTerminal/01 JD移动首页.html
@@ -81,21 +81,59 @@
                     <div class="swiper-pagination"></div>
                 </div>
                 <!-- 分类 -->
-                <div class="flex classify">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                <div class="flex classify j-s">
+                    <div>
+                        <img src="img/10001.png" alt="">
+                        <p>京东超市</p>
+                    </div>
+                    <div>
+                        <img src="img/10002.png" alt="">
+                        <p>充值缴费</p>
+                    </div>
+                    <div>
+                        <img src="img/10003.png" alt="">
+                        <p>附近好店</p>
+                    </div>
+                    <div>
+                        <img src="img/10004.png" alt="">
+                        <p>数码电器</p>
+                    </div>
+                    <div>
+                        <img src="img/10005.png" alt="">
+                        <p>京东新百货</p>
+                    </div>
+                    <div>
+                        <img src="img/10008.png" alt="">
+                        <p>京东生鲜</p>
+                    </div>
+                    <div>
+                        <img src="img/10009.png" alt="">
+                        <p>京东到家</p>
+                    </div>
+                    <div>
+                        <img src="img/10010.png" alt="">
+                        <p>PLUS会员</p>
+                    </div>
+                    <div>
+                        <img src="img/10011.png" alt="">
+                        <p>京东国际</p>
+                    </div>
+                    <div>
+                        <img src="img/10012.png" alt="">
+                        <p>京东拍卖</p>
+                    </div>
                 </div>
             </div>
-            <div class="middle">
+            <div class="middle flex ">
                 <!-- 商品列表 -->
+                <div>
+                    <img src="https://img14.360buyimg.com/mobilecms/s360x360_jfs/t1/3117/28/21772/107327/6461f057Fa2a2cf13/e26d737d45c6e9f7.jpg!q70.dpg.webp"
+                        alt="">
+                    <h2>荣康（Rongkang） 荣康RK-G800按摩椅家用按摩椅全身多功能太空豪华舱4D电动揉捏按摩椅子 皓月白</h2>
+                    <h3>￥26400.00</h3>
+                    <span>1万+条评论 100%好评</span>
+                    <span></span>
+                </div>
             </div>
             <div class="bottom">
                 <!-- tabbar导航 -->
@@ -105,7 +143,7 @@
 <script>
     //设置等比例像素切换 (通过脚本获取当前手机的屏幕宽度/设计稿图片宽度)
     //配置好之后所有的尺寸单位改为rem单位  （按照根元素的比例进行设置）
-    document.documentElement.style.fontSize = (document.documentElement.clientWidth / 470) * 16 + "px";
+    document.documentElement.style.fontSize = (document.documentElement.clientWidth / 430) * 16 + "px";
 </script>
 
 <!-- Initialize Swiper -->
