--- a/3 MobileTerminal/01 JD移动首页.html
+++ b/3 MobileTerminal/01 JD移动首页.html
@@ -123,15 +123,149 @@
                     </div>
                 </div>
             </div>
-            <div class="middle flex ">
+            <div class="middle">
                 <!-- 商品列表 -->
-                <div>
-                    <img src="https://img14.360buyimg.com/mobilecms/s360x360_jfs/t1/3117/28/21772/107327/6461f057Fa2a2cf13/e26d737d45c6e9f7.jpg!q70.dpg.webp"
-                        alt="">
-                    <h2>荣康（Rongkang） 荣康RK-G800按摩椅家用按摩椅全身多功能太空豪华舱4D电动揉捏按摩椅子 皓月白</h2>
-                    <h3>￥26400.00</h3>
-                    <span>1万+条评论 100%好评</span>
-                    <span></span>
+                <div class="productlist">
+                    <div class="product_item">
+                        <div class="img">
+                            <img src="https://img14.360buyimg.com/mobilecms/s360x360_jfs/t1/3117/28/21772/107327/6461f057Fa2a2cf13/e26d737d45c6e9f7.jpg!q70.dpg.webp"
+                                alt="">
+                        </div>
+                        <div class="content">
+                            <div class="title">荣康（Rongkang） 荣康RK-G800按摩椅家用按摩椅全身多功能太空豪华舱4D电动揉捏按摩椅子 皓月白</div>
+                            <div class="price">￥<span>26400</span>.00</div>
+                            <div class="desc flex j-s a-c">
+                                <div class="comment">1万+条评论 100%好评</div>
+                                <div class="simple">看相似</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product_item">
+                        <div class="img">
+                            <img src="https://img14.360buyimg.com/mobilecms/s360x360_jfs/t1/46121/27/23848/10546/647988c4Fb51c8871/026b82ecdb2c205c.jpg!q70.dpg.webp"
+                                alt="">
+                        </div>
+                        <div class="content">
+                            <div class="title">新款男士冰丝短袖时尚潮牌宽松透气T恤休闲运动速干衣 白色 M</div>
+                            <div class="price">￥<span>34</span>.00</div>
+                            <div class="desc flex j-s a-c">
+                                <div class="comment">100%好评率</div>
+                                <div class="simple">看相似</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product_item">
+                        <div class="img">
+                            <img src="https://img14.360buyimg.com/mobilecms/s360x360_jfs/t1/222427/22/29364/103000/64798803Fe909fbfe/8e37a5c4cb967010.jpg!q70.dpg.webp"
+                                alt="">
+                        </div>
+                        <div class="content">
+                            <div class="title">时尚牛仔五分裤男女同款印花 夏季冰丝短裤男ins潮牌潮流夏季宽松 浅蓝色 M</div>
+                            <div class="price">￥<span>51</span>.00</div>
+                            <div class="desc flex j-s a-c">
+                                <div class="comment">100%好评率</div>
+                                <div class="simple">看相似</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product_item">
+                        <div class="img">
+                            <img src="https://img14.360buyimg.com/mobilecms/s360x360_jfs/t1/156017/15/29630/47710/6305ff21Ee7bb5790/6af9f0fb2814f6ae.jpg!q70.dpg.webp"
+                                alt="">
+                        </div>
+                        <div class="content">
+                            <div class="title">德国SENAINS豪华天王座按摩椅 S10一代</div>
+                            <div class="price">￥<span>18800</span>.00</div>
+                            <div class="desc flex j-s a-c">
+                                <div class="comment">1万+条评论 100%好评</div>
+                                <div class="simple">看相似</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product_item">
+                        <div class="img">
+                            <img src="https://img14.360buyimg.com/mobilecms/s360x360_jfs/t1/173089/20/29262/60813/63fd4c1dF1e9c48b6/ee712f3db3e088f5.jpg!q70.dpg.webp"
+                                alt="">
+                        </div>
+                        <div class="content">
+                            <div class="title">男士商务小型双肩包韩版英伦简约潮轻便背包运动牛津布女青年小号 不配小熊_黑色</div>
+                            <div class="price">￥<span>89</span>.00</div>
+                            <div class="desc flex j-s a-c">
+                                <div class="comment">26条评论 100%好评率</div>
+                                <div class="simple">看相似</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product_item">
+                        <div class="img">
+                            <img src="https://img14.360buyimg.com/mobilecms/s360x360_jfs/t1/58878/2/22531/60258/639162a8Efb95f950/1a7da11d0ce68ef6.jpg!q70.dpg.webp"
+                                alt="">
+                        </div>
+                        <div class="content">
+                            <div class="title">汗蒸服女纯棉高档情侣装大码桑拿服男酒店温泉浴场按摩浴服汉蒸衣服一次性足浴艾灸洗浴中心推拿理疗服 女款粉色星星</div>
+                            <div class="price">￥<span>39</span>.00</div>
+                            <div class="desc flex j-s a-c">
+                                <div class="comment">3条评论 100%好评率</div>
+                                <div class="simple">看相似</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product_item">
+                        <div class="img">
+                            <img src="https://img14.360buyimg.com/mobilecms/s360x360_jfs/t1/241/32/20114/215525/64057e26F040e4dfe/73fe581bcab16957.jpg!q70.dpg.webp"
+                                alt="">
+                        </div>
+                        <div class="content">
+                            <div class="title">本宫饿了咖啡控一定要试试哇！咖啡黑巧饼干提拉米苏巧克力薄脆办公室零食</div>
+                            <div class="price">￥<span>18</span>.00</div>
+                            <div class="desc flex j-s a-c">
+                                <div class="comment">16条评论 100%好评率</div>
+                                <div class="simple">看相似</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product_item">
+                        <div class="img">
+                            <img src="https://img14.360buyimg.com/mobilecms/s360x360_jfs/t1/115611/37/38570/206562/648af11fFd0b6a43b/2441c3bd71e5fdc7.jpg!q70.dpg.webp"
+                                alt="">
+                        </div>
+                        <div class="content">
+                            <div class="title">索尼（SONY）KD-85X85K 85英寸 4K HDR 全面屏智能电视 广色域 120Hz 客厅巨幕 视觉低疲劳认证</div>
+                            <div class="price">￥<span>8825</span>.00</div>
+                            <div class="desc flex j-s a-c">
+                                <div class="comment">100%好评率</div>
+                                <div class="simple">2万+条评论 100%好评率</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product_item">
+                        <div class="img">
+                            <img src="https://img14.360buyimg.com/mobilecms/s360x360_jfs/t1/89142/21/38140/54959/64742d62F7d5030bd/fd33e8d8997230fb.jpg!q70.dpg.webp"
+                                alt="">
+                        </div>
+                        <div class="content">
+                            <div class="title">仙僖俫羽毛球拍 单拍 轻一体碳素拍 学生耐用型比赛娱乐训练用拍 亮晶绿分体1支+3球+手胶+拍包</div>
+                            <div class="price">￥<span>38</span>.00</div>
+                            <div class="desc flex j-s a-c">
+                                <div class="comment">100%好评率评</div>
+                                <div class="simple">看相似</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product_item">
+                        <div class="img">
+                            <img src="https://img14.360buyimg.com/mobilecms/s360x360_jfs/t1/155788/10/38712/259291/648a7440Fdcb763eb/6329fad997c55aed.jpg!q70.dpg.webp"
+                                alt="">
+                        </div>
+                        <div class="content">
+                            <div class="title">百草味 白芝麻猪肉脯60g 休闲零食肉干肉脯靖江特产小吃RX 【限1件】</div>
+                            <div class="price">￥<span>17</span>.00</div>
+                            <div class="desc flex j-s a-c">
+                                <div class="comment">10万+条评论 98%好评率</div>
+                                <div class="simple">看相似</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="bottom">
@@ -139,6 +273,7 @@
             </div>
         </div>
 </body>
+<script src="js/jquery-1.12.4.js"></script>
 <script>
     //设置等比例像素切换 (通过脚本获取当前手机的屏幕宽度/设计稿图片宽度)
     //配置好之后所有的尺寸单位改为rem单位  （按照根元素的比例进行设置）
@@ -159,6 +294,17 @@
             clickable: true,
         },
     });
+
+    $.get("./data/frame-prolist.json", function (data) {
+        console.log(data);
+        // data是商品集合的对象 数组对象
+        // 1.通过循环遍历该数组，将每一个数组中的元素对象渲染到对应的product_item中
+        $(data).each(function (i, item) {
+            console.log(item);
+            // es6
+            let str=``
+        })
+    })
 </script>
 
 </html>
