京东分类页

--- a/3 MobileTerminal/01 JD移动首页.html
+++ b/3 MobileTerminal/01 JD移动首页.html
@@ -7,6 +7,8 @@
     <title>JD移动首页</title>
     <!-- 引入axios -->
     <script src="https://cdn.bootcdn.net/ajax/libs/axios/1.5.0/axios.js"></script>
+    <!-- 引入通用css -->
+    <link rel="stylesheet" href="css/common.css">
     <!-- 轮播插件样式,在自定义样式之前 -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css">
