--- a/3 MobileTerminal/01 JD移动首页.html
+++ b/3 MobileTerminal/01 JD移动首页.html
@@ -16,7 +16,7 @@
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"> </script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js.map"> </script>
     <link rel="stylesheet" href="css/jd移动首页.css">
-    <link rel="stylesheet" href="https://at.alicdn.com/t/c/font_4644476_r51cpy3wrnh.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/c/font_4644476_uqmnju1jc0m.css">
 </head>
 
 <body>
@@ -92,9 +92,24 @@
                 <div class="productlist">
                 </div>
             </div>
-            <div class="bottom">
-                <!-- tabbar导航 -->
-            </div>
+            <footer class="flex j-s">
+                <div class="footer-item">
+                    <i class="iconfont icon-shouye"></i>
+                    <p>首页</p>
+                </div>
+                <div class="footer-item">
+                    <i class="iconfont icon-fenlei"></i>
+                    <p>分类</p>
+                </div>
+                <div class="footer-item">
+                    <i class="iconfont icon-gouwuche"></i>
+                    <p>购物车</p>
+                </div>
+                <div class="footer-item">
+                    <i class="iconfont icon-weidenglu"></i>
+                    <p>未登录</p>
+                </div>
+            </footer>
         </div>
 </body>
 <script src="js/jquery-1.12.4.js"></script>
