--- a/3 MobileTerminal/03 JD登录页.html
+++ b/3 MobileTerminal/03 JD登录页.html
@@ -28,9 +28,26 @@
                 <input type="text" placeholder="请输入收到的验证码">
                 <button>获取验证码</button>
             </div>
+            <button class="submit" type="submit">登 录</button>
+            <div class="login flex j-s">
+                <p>账号密码登录</p>
+                <p>手机快速注册</p>
+            </div>
         </form>
     </section>
-    <footer></footer>
+    <footer>
+        <p class="other">其他登录方式</p>
+        <div class="logo flex j-a">
+            <div><i class="iconfont icon-qq"></i></div>
+            <div><i class="iconfont icon-weixin"></i></div>
+            <div><i class="iconfont icon-apple"></i></div>
+        </div>
+        <div class="xieyi flex">
+            <input type="checkbox">
+            <p>若您输入的手机号未注册，将为您直接注册，注册即
+                视为同意 <span>京东用户注册协议、 用户隐私政策</span></p>
+        </div>
+    </footer>
 </body>
 <style>
 
