--- a/4 JavaScript/KW56JS/第二章分支结构/04等值判断的多分支结构.html
+++ b/4 JavaScript/KW56JS/第二章分支结构/04等值判断的多分支结构.html
@@ -54,7 +54,7 @@
      1.switch(表达式)  里面的表示需要和case后面的 值类型一致
      2.case 后面的值 必须是常量不能是变量
      3.正常情况下：每一个case后面要有break用于跳出switch语句块
-     4.defaul语句位置没有要求，可以放在第一句
+     4.default语句位置没有要求，可以放在第一句
 
     */
 
