--- a/4 JavaScript/KW56JS/第七章内置对象/01日期对象.html
+++ b/4 JavaScript/KW56JS/第七章内置对象/01日期对象.html
@@ -1,73 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+
 </body>
 
-    <script>
-        //获取当前日期对象
-        
-        let t = new Date();
-        console.log(t);
+<script>
+    //获取当前日期对象
 
-        //Sat Sep 03 2022 08:53:18 GMT+0800 (中国标准时间)
-        //以上时间显示不符合我们习惯，转换下格式
-        //从currentTime里面提取出年月日，时分秒
-        let year = t.getFullYear();
-        let month = t.getMonth()+1;
-        // let day = t.getDay();//星期
-        let day = t.getDate();//日期
+    let t = new Date();
+    console.log(t);
 
-        let hour = t.getHours();
-        let min = t.getMinutes();
-        let sec = t.getSeconds();
+    //Sat Sep 03 2022 08:53:18 GMT+0800 (中国标准时间)
+    //以上时间显示不符合我们习惯，转换下格式
+    //从currentTime里面提取出年月日，时分秒
+    let year = t.getFullYear();
+    let month = t.getMonth() + 1;
+    // let day = t.getDay();//星期
+    let day = t.getDate();//日期
 
-        let time = `${year}/${month}/${day} ${hour}:${min}:${sec}`;
+    let hour = t.getHours();
+    let min = t.getMinutes();
+    let sec = t.getSeconds();
+
+    let time = `${year}/${month}/${day} ${hour}:${min}:${sec}`;
 
 
-        console.log(time);
+    console.log(time);
 
-        //获取当前日期的时间戳
-        let timeC = t.getTime();
-        console.log(timeC);
+    //获取当前日期的时间戳
+    let timeC = t.getTime();
+    console.log(timeC);
 
-        //改变当前日期的年份
-        t.setFullYear(2021);
+    //改变当前日期的年份
+    t.setFullYear(2021);
 
-        console.log(t);
+    console.log(t);
 
-        //改变日期为5天之后
-        let d =  t.getDate();
-        t.setDate(d+5);
-        console.log(t);
+    //改变日期为5天之后
+    let d = t.getDate();
+    t.setDate(d + 5);
+    console.log(t);
 
-        //获取当前时间
-        let currentTime = new Date();
+    //获取当前时间
+    let currentTime = new Date();
+    console.log("========================")
 
-        //鼠标放在方法上查看有没有返回值，如果没有返回值  void   ，否则有相应的返回值
-         let  t2 =  currentTime.toLocaleDateString();
-         console.log(t2);
+    //鼠标放在方法上查看有没有返回值，如果没有返回值  void   ，否则有相应的返回值
+    let t2 = currentTime.toLocaleDateString();
+    console.log(t2);
 
-         let t3 = currentTime.toLocaleTimeString();
-         console.log(t3);
+    let t3 = currentTime.toLocaleTimeString();
+    console.log(t3);
 
-         let t4 = currentTime.toLocaleString();
-         console.log(t4);
+    let t4 = currentTime.toLocaleString();
+    console.log(t4);
 
-         //直接将字符串格式的时间转换成时间戳
-         let a =  Date.parse("1971-1-1 12:10:10");
-         console.log(a);
+    //直接将字符串格式的时间转换成时间戳
+    let a = Date.parse("1971-1-1 12:10:10");
+    console.log(a);
 
-         let oldTime = new Date("1971-1-1");  //时间类型的对象
-         console.log(oldTime);
-         //时间类型对象转为时间戳
-         let oldTimeC =  oldTime.getTime();
-         console.log(oldTimeC);
-    </script>
+    let oldTime = new Date("1971-1-1");  //时间类型的对象
+    console.log(oldTime);
+    //时间类型对象转为时间戳
+    let oldTimeC = oldTime.getTime();
+    console.log(oldTimeC);
+</script>
+
 </html>
